# openbet

./: .env.example  .gitignore  AI_DEPENDENCY_DETECTION.md  ARBITRAGE_DETECTION_GUIDE.md  README.md  get_kalshi_markets.py  pyproject.toml  requirements.txt  setup.sh  test_phase2_structure.py
openbet/: cli.py  config.py
openbet/analysis/: analyzer.py  consensus.py  context_builder.py  models.py
openbet/arbitrage/: __init__.py  dependency_detector.py  models.py
openbet/database/: db.py  models.py  repositories.py
openbet/kalshi/: client.py  exceptions.py  models.py
openbet/llm/: base.py  claude.py  gemini.py  grok.py  manager.py  models.py  openai.py
openbet/trading/: models.py  risk.py  signals.py  sizing.py  strategy.py
openbet/utils/: helpers.py  logger.py
